force-app/main/default/objects/Sample_Request_Form__c/Sample_Request_Form__c.object-meta.xml
<CustomObject>
    <label>Sample Request</label>
    <nameField>
        <displayFormat>Sample Request Form-{000}</displayFormat>
        <label>Sample Request Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>