force-app/main/default/objects/Sample_Request_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>