force-app/main/default/objects/Sample_Request_Form__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>