force-app/main/default/objects/Sample_Request_Form__c/fields/Care_of_Name__c.field-meta.xml
<CustomField>
    <fullName>Care_of_Name__c</fullName>
    <label>Attention to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>