force-app/main/default/objects/Sample_Request_Form__c/fields/Company_name__c.field-meta.xml
<CustomField>
    <fullName>Company_name__c</fullName>
    <inlineHelpText>In case if account record doesn&apos;t exist in Salesforce, input account name here.</inlineHelpText>
    <label>Account Name(if not found)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>