force-app/main/default/objects/Sample_Request_Form__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>