force-app/main/default/objects/Sample_Request_Form__c/fields/Email_address_for_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Email_address_for_confirmation__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>