force-app/main/default/objects/Sample_Request_Form__c/fields/Employee_name__c.field-meta.xml
<CustomField>
    <fullName>Employee_name__c</fullName>
    <label>Employee name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>