force-app/main/default/objects/Sample_Request_Form__c/fields/How_material_be_ship_to_the_branch__c.field-meta.xml
<CustomField>
    <fullName>How_material_be_ship_to_the_branch__c</fullName>
    <inlineHelpText>How should material be shipped to the branch?</inlineHelpText>
    <label>Ship Via – Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Way Possible</fullName>
            </value>
            <value>
                <fullName>Consolidated/Transfer Truck</fullName>
            </value>
            <value>
                <fullName>Ship on next delivery</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>2nd/3rd</fullName>
            </value>
            <value>
                <fullName>2nd day air</fullName>
                <isActive>false</isActive>
                <label>2nd day air</label>
            </value>
            <value>
                <fullName>3rd day air</fullName>
                <isActive>false</isActive>
                <label>3rd day air</label>
            </value>
            <value>
                <fullName>Next day air - This will require Manager approval before we can order</fullName>
                <isActive>false</isActive>
                <label>Next day air - This will require Manager approval before we can order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>