force-app/main/default/objects/Sample_Request_Form__c/fields/How_Material_Be_Shipped_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>How_Material_Be_Shipped_To_Customer__c</fullName>
    <label>Ship Via – Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>3rd Day Air</fullName>
            </value>
            <value>
                <fullName>2nd Day Air</fullName>
            </value>
            <value>
                <fullName>Next day Air - This will require Manager approval before we can order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>