force-app/main/default/objects/Sample_Request_Form__c/fields/Job_name__c.field-meta.xml
<CustomField>
    <fullName>Job_name__c</fullName>
    <label>Job name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>