force-app/main/default/objects/Sample_Request_Form__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <displayFormat>JN-{0000}</displayFormat>
    <label>Job Number</label>
    <type>AutoNumber</type>
</CustomField>