force-app/main/default/objects/Sample_Request_Form__c/fields/Kerridge_Sample_order__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_Sample_order__c</fullName>
    <label>Kerridge Sample order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>