force-app/main/default/objects/Sample_Request_Form__c/fields/Like_to_pick_your_sample_up_at_your__c.field-meta.xml
<CustomField>
    <fullName>Like_to_pick_your_sample_up_at_your__c</fullName>
    <inlineHelpText>Would you like to pick your sample up at your local Louisville Tile, or have it shipped to you?</inlineHelpText>
    <label>Like to pick your sample up at your LT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Louisville Tile Pick Up</fullName>
            </value>
            <value>
                <fullName>Ship To My Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>