force-app/main/default/objects/Sample_Request_Form__c/fields/Louisville_Tile__c.field-meta.xml
<CustomField>
    <fullName>Louisville_Tile__c</fullName>
    <label>Louisville Tile To Pick Up From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Louisville,KY</fullName>
            </value>
            <value>
                <fullName>Westport Village (Louisville)</fullName>
            </value>
            <value>
                <fullName>Lexington, KY</fullName>
            </value>
            <value>
                <fullName>Nashville, TN</fullName>
            </value>
            <value>
                <fullName>Knoxville, TN</fullName>
            </value>
            <value>
                <fullName>Chattanooga, TN</fullName>
            </value>
            <value>
                <fullName>Johnson City, TN</fullName>
            </value>
            <value>
                <fullName>Indianapolis, IN</fullName>
            </value>
            <value>
                <fullName>Evansville, IN</fullName>
            </value>
            <value>
                <fullName>South Bend, IN</fullName>
            </value>
            <value>
                <fullName>Fort Wayne, IN</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH</fullName>
            </value>
            <value>
                <fullName>Grand Rapids, MI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>