force-app/main/default/objects/Sample_Request_Form__c/fields/Manufacture_for_sample__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_for_sample__c</fullName>
    <label>Manufacture for sample</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>AMERICAN OLEAN</fullName>
            </value>
            <value>
                <fullName>AMERICAN UNIVERSAL</fullName>
            </value>
            <value>
                <fullName>ANATOLIA</fullName>
            </value>
            <value>
                <fullName>CROSSVILLE</fullName>
            </value>
            <value>
                <fullName>FLORIM</fullName>
            </value>
            <value>
                <fullName>WEDI</fullName>
            </value>
            <value>
                <fullName>WOW</fullName>
            </value>
            <value>
                <fullName>ANT</fullName>
            </value>
            <value>
                <fullName>AOT</fullName>
            </value>
            <value>
                <fullName>ATI</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>ATU</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CDU</fullName>
            </value>
            <value>
                <fullName>CRV</fullName>
            </value>
            <value>
                <fullName>EML</fullName>
            </value>
            <value>
                <fullName>FBC</fullName>
            </value>
            <value>
                <fullName>FIL</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>