force-app/main/default/objects/Sample_Request_Form__c/fields/Sample_Form_Url1__c.field-meta.xml
<CustomField>
    <fullName>Sample_Form_Url1__c</fullName>
    <label>Sample Form Url1</label>
    <type>Url</type>
</CustomField>