force-app/main/default/objects/Sample_Request_Form__c/fields/sample_Form_Url__c.field-meta.xml
<CustomField>
    <fullName>sample_Form_Url__c</fullName>
    <formula>CASE( RecordType.DeveloperName ,&apos;InternalEmployee&apos;, HYPERLINK($Label.Sample_Request_Form_URL+&apos;?Id=&apos; +  Id,&apos;Form URL&apos; ,&apos;_blank&apos;),&apos;Decor24_Samples&apos;, HYPERLINK($Label.Decor_URL+&apos;?Id=&apos; +  Id,&apos;Form URL&apos; ,&apos;_blank&apos;),&apos;Website_Samples&apos;, HYPERLINK($Label.WebSite_Form_URL+&apos;?Id=&apos; +  Id,&apos;Form URL&apos; ,&apos;_blank&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Form Url</label>
    <type>Text</type>
</CustomField>