force-app/main/default/objects/Sample_Request_Form__c/fields/Sample_Request_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Form_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Sample Ordered</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Save as Draft</fullName>
            </value>
            <value>
                <fullName>Apporved</fullName>
                <isActive>false</isActive>
                <label>Apporved</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected By Sales Team</fullName>
                <isActive>false</isActive>
                <label>Rejected By Sales Team</label>
            </value>
            <value>
                <fullName>Sample received by branch</fullName>
                <isActive>false</isActive>
                <label>Sample received by branch</label>
            </value>
            <value>
                <fullName>Sample sent to branch</fullName>
                <isActive>false</isActive>
                <label>Sample sent to branch</label>
            </value>
            <value>
                <fullName>Submit For Approval</fullName>
                <isActive>false</isActive>
                <label>Submit For Approval</label>
            </value>
            <value>
                <fullName>With Purchase team</fullName>
                <isActive>false</isActive>
                <label>With Purchase team</label>
            </value>
            <value>
                <fullName>With warehouse team</fullName>
                <isActive>false</isActive>
                <label>With warehouse team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>