force-app/main/default/objects/Sample_Request_Form__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock Sample</fullName>
            </value>
            <value>
                <fullName>Special Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>