force-app/main/default/objects/Sample_Request_Form__c/fields/Select_Branch__c.field-meta.xml
<CustomField>
    <fullName>Select_Branch__c</fullName>
    <inlineHelpText>Select Branch Material should be shipped to.</inlineHelpText>
    <label>Select Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nashville</fullName>
            </value>
            <value>
                <fullName>Johnson City</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Chattanooga</fullName>
            </value>
            <value>
                <fullName>Knoxville</fullName>
            </value>
            <value>
                <fullName>Louisville</fullName>
            </value>
            <value>
                <fullName>Evansville</fullName>
            </value>
            <value>
                <fullName>Fishers</fullName>
            </value>
            <value>
                <fullName>Lexington</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
            <value>
                <fullName>Fort Wayne</fullName>
            </value>
            <value>
                <fullName>South Bend</fullName>
            </value>
            <value>
                <fullName>Grand Rapids</fullName>
            </value>
            <value>
                <fullName>West Port Village</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>