force-app/main/default/objects/Sample_Request_Form__c/fields/Select_Sheet_No_To_Tie_Sample__c.field-meta.xml
<CustomField>
    <fullName>Select_Sheet_No_To_Tie_Sample__c</fullName>
    <label>Select Sheet No To Tie Sample</label>
    <length>20</length>
    <type>Text</type>
</CustomField>