force-app/main/default/objects/Sample_Request_Form__c/fields/Ship_to_Louis_tile_branch__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Louis_tile_branch__c</fullName>
    <label>Ship to Louis tile branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>choose one</fullName>
                <isActive>false</isActive>
                <label>choose one</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>