force-app/main/default/objects/Sample_Request_Form__c/fields/Shipping_address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_address__c</fullName>
    <label>Shipping address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>