force-app/main/default/objects/Sample_Request_Form__c/fields/Total_Sample_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Sample_Cost__c</fullName>
    <formula>Shipping_Charges__c  +  Sample_Cost__c  +  Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sample Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>