force-app/main/default/objects/Sample_Request_Form__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>