force-app/main/default/objects/Sample_Request_Form__c/fields/What_type_of_project_you_are_working_on__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_project_you_are_working_on__c</fullName>
    <label>What type of project you are working on?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>