force-app/main/default/objects/Sample_Request_Form__c/fields/Where_sample_to_be_shipped__c.field-meta.xml
<CustomField>
    <fullName>Where_sample_to_be_shipped__c</fullName>
    <label>Where sample to be shipped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>