force-app/main/default/objects/Sample_Request_Form__c/fields/Who_is_your_LT_sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Who_is_your_LT_sales_rep__c</fullName>
    <inlineHelpText>Who is your Louisville tile Sales Rep?</inlineHelpText>
    <label>Who is your LT sales rep?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>