force-app/main/default/objects/Sample_Request_Form__c/recordTypes/Decor24_Samples.recordType-meta.xml
<RecordType>
    <fullName>Decor24_Samples</fullName>
    <active>true</active>
    <description>When Sample Request Form is submitted By External Users. This Record Type should be selected.</description>
    <label>Decor24 Samples</label>
</RecordType>