force-app/main/default/objects/Sample_Request_Form__c/recordTypes/Display_Item_Request.recordType-meta.xml
<RecordType>
    <fullName>Display_Item_Request</fullName>
    <active>true</active>
    <description>When Display Item Request Form is submitted By External Users. This Record Type should be selected.</description>
    <label>Display Item Request</label>
</RecordType>