force-app/main/default/objects/Sample_Request_Form__c/recordTypes/InternalEmployee.recordType-meta.xml
<RecordType>
    <fullName>InternalEmployee</fullName>
    <active>true</active>
    <description>When Sample Request Form is submiutted By Internal Employee. This Record Type should be selected.</description>
    <label>Internal Employee</label>
</RecordType>