force-app/main/default/objects/Sample_Request_Form__c/recordTypes/Website_Samples.recordType-meta.xml
<RecordType>
    <fullName>Website_Samples</fullName>
    <active>true</active>
    <description>When Sample Request Form is submitted By External Users. This Record Type should be selected.</description>
    <label>Website Samples</label>
</RecordType>