force-app/main/default/objects/Sample_Request_Form__c/validationRules/Record_Not_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Not_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
! ISNEW() ,
TEXT( Sample_Request_Form_Status__c )=&apos;Submitted&apos;,
ISPICKVAL(PRIORVALUE(Sample_Request_Form_Status__c), &quot;Submitted&quot;),
$Profile.Name != &quot;Sales Management&quot;, 
$Profile.Name != &quot;System Administrator&quot;,
$Profile.Name != &quot;Sampling Team&quot;

)</errorConditionFormula>
    <errorMessage>This form is submitted, you can&apos;t make changes now. If you like to make changes please get in touch with sampling team.</errorMessage>
</ValidationRule>