force-app/main/default/objects/Sample_Request_Form__c/listViews/Decor_24_Form.listView-meta.xml
<ListView>
    <fullName>Decor_24_Form</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Email_address_for_confirmation__c</columns>
    <columns>Phone_number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submitted_By__c</field>
        <operation>equals</operation>
        <value>External Users Decor24</value>
    </filters>
    <label>Decor 24 Form</label>
</ListView>