force-app/main/default/objects/Sample_Request_Form__c/listViews/Internal_Form.listView-meta.xml
<ListView>
    <fullName>Internal_Form</fullName>
    <columns>NAME</columns>
    <columns>Employee_name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Sample_Type__c</columns>
    <columns>Sample_Request_Form_Status__c</columns>
    <columns>Email_address_for_confirmation__c</columns>
    <columns>Phone_number__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submitted_By__c</field>
        <operation>equals</operation>
        <value>Internal Employee</value>
    </filters>
    <label>Internal Form</label>
</ListView>