force-app/main/default/objects/Sample_Request_Form__c/listViews/Rejected_Sample_Requests.listView-meta.xml
<ListView>
    <fullName>Rejected_Sample_Requests</fullName>
    <columns>NAME</columns>
    <columns>Employee_name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Sample_Request_Form_Status__c</columns>
    <columns>How_Material_Be_Shipped_To_Customer__c</columns>
    <columns>How_material_be_ship_to_the_branch__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sample_Request_Form_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Sample Requests</label>
</ListView>