force-app/main/default/objects/Sample_Request_Form__c/listViews/Sample_Request_Form_Queue_Sample_Request_Form.listView-meta.xml
<ListView>
    <fullName>Sample_Request_Form_Queue_Sample_Request_Form</fullName>
    <filterScope>Queue</filterScope>
    <label>Sample Request Form Queue</label>
    <queue>Sample_Request_Form_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>