force-app/main/default/objects/Sample_Request_Form__c/listViews/Sample_Request_Saved_as_Draft.listView-meta.xml
<ListView>
    <fullName>Sample_Request_Saved_as_Draft</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Who_is_your_LT_sales_rep__c</columns>
    <columns>Sample_Request_Form_Status__c</columns>
    <columns>How_Material_Be_Shipped_To_Customer__c</columns>
    <columns>How_material_be_ship_to_the_branch__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sample_Request_Form_Status__c</field>
        <operation>equals</operation>
        <value>Save as Draft</value>
    </filters>
    <label>Saved as Draft - Sample form</label>
</ListView>