force-app/main/default/objects/Sample_Request_Form__c/listViews/Sample_Requests_Default.listView-meta.xml
<ListView>
    <fullName>Sample_Requests_Default</fullName>
    <columns>NAME</columns>
    <columns>Employee_name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Sample_Request_Form_Status__c</columns>
    <columns>Kerridge_Sample_order__c</columns>
    <columns>Select_Sheet_No_To_Tie_Sample__c</columns>
    <columns>How_Material_Be_Shipped_To_Customer__c</columns>
    <columns>How_material_be_ship_to_the_branch__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Default Sample Requests</label>
</ListView>