force-app/main/default/objects/Sample_Request_Form__c/listViews/Sample_Team_Sample_Request_Form.listView-meta.xml
<ListView>
    <fullName>Sample_Team_Sample_Request_Form</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Employee_name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Job_name__c</columns>
    <columns>Sample_Request_Form_Status__c</columns>
    <columns>How_Material_Be_Shipped_To_Customer__c</columns>
    <columns>How_material_be_ship_to_the_branch__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sample Request</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>