force-app/main/default/objects/Sample_Request_Form__c/listViews/Website_Form.listView-meta.xml
<ListView>
    <fullName>Website_Form</fullName>
    <columns>NAME</columns>
    <columns>Sample_Request_Form_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submitted_By__c</field>
        <operation>equals</operation>
        <value>Website Enquiry</value>
    </filters>
    <label>Website Form</label>
</ListView>